@@ -15,11 +15,11 @@ JSON::MaybeXS     = 1.003005
 Moo               = 2.000001
 Plack             = 1.0036
 SVG               = 2.64
-Template          = 2.26
 Try::Tiny         = 0.22
 Type::Tiny        = 1.000005
 Unexpected        = v0.39.0
 Web::Components   = v0.4.0
+Web::Components::Role::TT = v0.2.0
 Web::Simple       = 0.030
 
 [Prereqs / ConfigureRequires]
